--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
 <body>
     <nav class="navbar">
         <button><svg style="color: #696969" height="27px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="22px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z" fill="#696969"></path></svg></button>
-        <button><svg height="25" id="Color" viewBox="0 0 200 200" width="25" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1{fill:#ffb612;}.cls-2{fill:#593a25;}</style></defs><title/><path class="cls-1" d="M100,101.39a42,42,0,0,1-30.06-12.6,42.75,42.75,0,0,1-12.34-30.2c0-13.43,2.6-23.63,7.93-31.17,7-9.9,18.63-14.92,34.47-14.92,16.17,0,27.89,5,34.8,15,5.18,7.44,7.6,17.34,7.6,31.11a42.75,42.75,0,0,1-12.34,30.2A41.88,41.88,0,0,1,100,101.39Zm0-77.91c-12.25,0-20.59,3.36-25.51,10.29-4,5.6-5.9,13.71-5.9,24.8a31.41,31.41,0,1,0,62.82,0c0-11.42-1.8-19.33-5.63-24.84C121,26.84,112.53,23.48,100,23.48Z"/><path class="cls-2" d="M141,187.5H59a38.3,38.3,0,0,1,0-76.6h82a38.3,38.3,0,0,1,0,76.6ZM59,121.89a27.31,27.31,0,0,0,0,54.61h82a27.31,27.31,0,0,0,0-54.61Z"/></svg></button>
-        <ul>
-            <li>login</li>
-            <li>signin</li>
-            <li>home</li>
-        </ul>
+        <div class="profile">
+            <img onclick="()=>{alert('I am an alert box!');}" src="blank-profile-picture-973460__340.png" alt="notloaded"/>
+            <ul class="drop-content">
+                <li>
+                    <a>Login</a>
+                </li>
+                <li>
+                    <a>Signin</a>
+                </li>
+                <li>
+                    <a>Home</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <div class="body">
         <div class="searchbar_body">
