--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <nav class="navbar">
-        <button><svg style="color: #696969" height="27px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="22px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z" fill="#696969"></path></svg></button>
-        <div class="profile">
-            <img onclick="()=>{alert('I am an alert box!');}" src="blank-profile-picture-973460__340.png" alt="notloaded"/>
-            <ul class="drop-content">
+        <div class="left_nav">
+            <button><svg style="color: #696969" height="27px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="22px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z" fill="#696969"></path></svg></button>
+            <img src="logo.png" alt="not loading">
+        </div>
+        <div id="profile" class="profile">
+            <img onclick="menu()" src="blank-profile-picture-973460__340.png" alt="notloaded"/>
+            <ul id="signup_box" class="drop-content">
                 <li>
                     <a>Login</a>
                 </li>
@@ -27,7 +30,7 @@
     <div class="body">
         <div class="searchbar_body">
             <input placeholder="search book name..." class="searchbar" type="text">
-            <input class="searchbar_btn" value="Search" type="button">
+            <input class="searchbar_btn" value="SEARCH" type="button"></input>
         </div>
         
         <div class="container">
@@ -132,5 +135,7 @@
             </div>
         </div>
     </div>
+    <section style="height: 600px;"></section>
 </body>
+<script src="script.js"></script>
 </html>
