--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>Details</button>
+                        <button>View</button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
