--- a/details.html
+++ b/details.html
@@ -57,7 +57,14 @@
                 <div class="details condition">
                     <span>Book Condition: </span>
                     <p>Years old: 3yr</p>
-                    <p>rating condition: 7/10</p>
+                    <p>Rating condition: 7/10</p>
+                    <p></p>
+                </div>
+                <div class="details">
+                    <span>owner's details: </span>
+                    <p>Location: sirinikatan, bolpur</p>
+                    <p>collect the book in shiksha vabna</p>
+                    <p></p>
                 </div>
             </div>
         </div>
