--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <img onclick="menu()" src="blank-profile-picture-973460__340.png" alt="notloaded"/>
             <ul id="signup_box" class="drop-content">
                 <li>
-                    <a>Login</a>
+                    <a href="signin.html">Login</a>
                 </li>
                 <li>
-                    <a>Signin</a>
+                    <a href="signup.html">SignUp</a>
                 </li>
                 <li>
-                    <a>Home</a>
+                    <a href="/">Home</a>
                 </li>
             </ul>
         </div>
