--- a/signin.html
+++ b/signin.html
@@ -6,35 +6,41 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-image: url(/bgsmall.jpg);">
-    <nav class="navbar">
-        <div class="left_nav">
-            <button><svg style="color: #696969" height="27px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="22px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z" fill="#696969"></path></svg></button>
-            <img src="logo.png" alt="not loading">
-        </div>
-        <div id="profile" class="profile">
-            <img onclick="menu()" src="blank-profile-picture-973460__340.png" alt="notloaded"/>
-            <ul id="signup_box" class="drop-content">
-                <li>
-                    <a class="dropselected">Login</a>
-                </li>
-                <li>
-                    <a>Signup</a>
-                </li>
-                <li>
-                    <a>Home</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="signup_body">
-        <div class="signup_box">
-            <h2>SignIn</h2>
-            <label for="">username</label>
-            <input type="text">
-            <label for="">password</label>
-            <input type="text">
-            <input type="button" value="Submit">
+<body>
+    <div class="bg_img">
+        <nav class="navbar">
+            <div class="left_nav">
+                <button><svg style="color: #696969" height="27px" id="Layer_1" version="1.1" viewBox="0 0 32 32" width="22px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path d="M4,10h24c1.104,0,2-0.896,2-2s-0.896-2-2-2H4C2.896,6,2,6.896,2,8S2.896,10,4,10z M28,14H4c-1.104,0-2,0.896-2,2 s0.896,2,2,2h24c1.104,0,2-0.896,2-2S29.104,14,28,14z M28,22H4c-1.104,0-2,0.896-2,2s0.896,2,2,2h24c1.104,0,2-0.896,2-2 S29.104,22,28,22z" fill="#696969"></path></svg></button>
+                <img src="logo.png" alt="not loading">
+            </div>
+            <div id="profile" class="profile">
+                <img onclick="menu()" src="images/blank-profile-picture-973460__340.png" alt="notloaded"/>
+                <ul id="signup_box" class="drop-content">
+                    <li>
+                        <a class="dropselected">Login</a>
+                    </li>
+                    <li>
+                        <a href="signup.html">Signup</a>
+                    </li>
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="signup_body">
+            <img src="images/bg1.jpg" alt="not loaded"/>
+            <div class="signup_box">
+                <h2>SignIn</h2>
+                <form action="" method="get">
+                    <label>Email Id</label>
+                    <input required placeholder="Enter email" type="email">
+                    <label>Password</label>
+                    <input required placeholder="Enter Password" type="password">
+                    <a href="signup.html">create one?</a>
+                    <input type="submit" value="Submit">
+                </form>
+            </div>
         </div>
     </div>
 </body>
