--- a/details.html
+++ b/details.html
@@ -14,7 +14,7 @@
             <img src="logo.png" alt="not loading">
         </div>
         <div id="profile" class="profile">
-            <img onclick="menu()" src="blank-profile-picture-973460__340.png" alt="notloaded"/>
+            <img onclick="menu()" src="images/blank-profile-picture-973460__340.png" alt="notloaded"/>
             <ul id="signup_box" class="drop-content">
                 <li>
                     <a>Login</a>
@@ -28,10 +28,16 @@
             </ul>
         </div>
     </nav>
+    <div id="imageview" class="imageview">
+        <div class="innerImageview">
+            <img onclick="closebtn()" id="closebtn" src="images/close.png" alt="close"/>
+            <img src="high-angle-books-stack-assortment.jpg" alt="notloaded"/>
+        </div>
+    </div>
     <div class="body">
         <div class="details_con">
             <div class="imageBox">
-                <img src="english-dictionary-blue-background.jpg" alt="">
+                <img onclick="closebtn()" src="high-angle-books-stack-assortment.jpg" alt="">
             </div>
             <div class="details_box">
                 <h2>Let Us C : Authentic Guide To C Programming Language</h2>
@@ -69,6 +75,13 @@
             </div>
         </div>
     </div>
+    <footer>
+        <img src="images/vbu_logo_white.png" alt="notloaded">
+        <div>
+            <h5>Project by Sk Nur Aktar</h5>
+            <p>Old Book selling website for VBU.</p>
+        </div>
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
