--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="logo.png" alt="not loading">
         </div>
         <div id="profile" class="profile">
-            <img onclick="menu()" src="blank-profile-picture-973460__340.png" alt="notloaded"/>
+            <img onclick="menu()" src="images/blank-profile-picture-973460__340.png" alt="notloaded"/>
             <ul id="signup_box" class="drop-content">
                 <li>
                     <a href="signin.html">Login</a>
@@ -22,7 +22,7 @@
                     <a href="signup.html">SignUp</a>
                 </li>
                 <li>
-                    <a href="/">Home</a>
+                    <a href="">Home</a>
                 </li>
             </ul>
         </div>
@@ -31,6 +31,7 @@
         <div class="searchbar_body">
             <input placeholder="search book name..." class="searchbar" type="text">
             <input class="searchbar_btn" value="SEARCH" type="button"></input>
+            <!-- <button><img src="search.svg" alt="search"></button> -->
         </div>
         
         <div class="container">
@@ -44,7 +45,7 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>Details</button>
+                        <button><a href="details.html">Details</a></button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
@@ -60,7 +61,7 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>Details</button>
+                        <button>Buy</button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
@@ -136,6 +137,13 @@
         </div>
     </div>
     <section style="height: 600px;"></section>
+    <footer>
+        <img src="images/vbu_logo_white.png" alt="notloaded">
+        <div>
+            <h5>Project by Sk Nur Aktar</h5>
+            <p>Old Book selling website for VBU.</p>
+        </div>
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
