--- a/signin.html
+++ b/signin.html
@@ -43,6 +43,13 @@
             </div>
         </div>
     </div>
+    <footer>
+        <img src="images/vbu_logo_white.png" alt="notloaded">
+        <div>
+            <h5>Project by Sk Nur Aktar</h5>
+            <p>Old Book selling website for VBU.</p>
+        </div>
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
