--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,13 @@
             <img src="images/bg2.jpg" alt="not loaded"/>
         </div>
     </div>
-    <footer><img src="" alt="notloaded"><div>texts</div></footer>
+    <footer>
+        <img src="images/vbu_logo_white.png" alt="notloaded">
+        <div>
+            <h5>Project by Sk Nur Aktar</h5>
+            <p>Old Book selling website for VBU.</p>
+        </div>
+    </footer>
 </body>
 <script src="script.js"></script>
 </html>
