--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>Buy</button>
+                        <button><a href="details.html">Details</a></button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
@@ -77,7 +77,7 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>View</button>
+                        <button><a href="details.html">Details</a></button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
@@ -93,7 +93,7 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>Details</button>
+                        <button><a href="details.html">Details</a></button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
@@ -109,7 +109,7 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>Details</button>
+                        <button><a href="details.html">Details</a></button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
@@ -125,7 +125,39 @@
                     <h5>Let us C.</h5>
                     <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
                     <div class="innerbox">
-                        <button>Details</button>
+                        <button><a href="details.html">Details</a></button>
+                        <div class="pricebox">
+                            <span>Price:</span><span>299</span>
+                        </div>
+                    </div>
+                    
+                </div>
+                <!-- inner box item / img/ details -->
+            </div>
+            <div class="card">
+                <span class="sub">Sub_ Math</span>
+                <img src="high-angle-books-stack-assortment.jpg" alt="">
+                <div class="details">
+                    <h5>Let us C.</h5>
+                    <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
+                    <div class="innerbox">
+                        <button><a href="details.html">Details</a></button>
+                        <div class="pricebox">
+                            <span>Price:</span><span>299</span>
+                        </div>
+                    </div>
+                    
+                </div>
+                <!-- inner box item / img/ details -->
+            </div>
+            <div class="card">
+                <span class="sub">Sub_ Math</span>
+                <img src="high-angle-books-stack-assortment.jpg" alt="">
+                <div class="details">
+                    <h5>Let us C.</h5>
+                    <p>Writer: Yashavant Kanetkar.<br>Publishing Date:2022<br>17th Eddition.</p>
+                    <div class="innerbox">
+                        <button><a href="details.html">Details</a></button>
                         <div class="pricebox">
                             <span>Price:</span><span>299</span>
                         </div>
